# autopunk-pitch

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_tables.py  002_add_billing_and_platform_profiles.py
backend/app/: auth.py  celery_app.py  config.py  database.py  exceptions.py  main.py
backend/app/agents/: cultural_adaptation.py  formatting.py  orchestrator.py  qc.py  schemas.py  transcription.py  translation.py
backend/app/api/v1/: __init__.py  billing.py  export.py  jobs.py  platform_profiles.py  projects.py  schemas.py  subtitles.py
backend/app/formats/: __init__.py  ebu_stl.py  srt.py  validators.py  webvtt.py
backend/app/models/: __init__.py  invoice.py  job.py  platform_profile.py  project.py  subtitle.py  user.py
backend/app/services/: audio_service.py  billing_service.py  storage_service.py
backend/app/tasks/: pipeline_task.py  transcription_task.py
backend/tests/: conftest.py
backend/tests/fixtures/: sample_transcription_response.json
backend/tests/fixtures/sample_subtitles/: sample.srt  sample.vtt
backend/tests/test_agents/: test_audio_service.py  test_cultural_adaptation.py  test_formatting.py  test_orchestrator.py  test_qc.py  test_transcription.py  test_translation.py
backend/tests/test_api/: test_auth.py  test_billing.py  test_platform_profiles.py  test_projects.py  test_subtitles.py
backend/tests/test_formats/: test_srt.py  test_validators.py  test_webvtt.py
docs/: HANDOFF.md  PICKUP-PROMPT.md  PRD.md  (+5 more)
(+118 files in other folders)
